<resources>
    <string name="app_name">Envirify</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="preference_file_key">Preferences</string>
    <string name="menu_home">Envirify</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="add_name">Name</string>
    <string name="add_department">Department</string>
    <string name="add_capacity">Capacity</string>
    <string name="add_city">City</string>
    <string name="add_direction">Direction</string>
    <string name="add_bathrooms">Bathrooms</string>
    <string name="add_description">Description</string>
    <string name="add_habitations">Habitations</string>
    <string name="add_urlImage">UrlImage</string>
    <string name="login_name">Envirify</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register_name">Name</string>
    <string name="register_email">Email</string>
    <string name="register_number">Phone Number</string>
    <string name="register_password">Password</string>
    <string name="register_confirm_password">Confirm Password</string>
    <string name="register_button">SIGN UP</string>
    <string name="register_genre">Genre (Please type : Male , Female or Other)</string>
    <string name="editProfile_button">Editar</string>
    <string name="add_review_title">Tell us about your experience!</string>
    <string name="add_review_description">Tell us about your experience here</string>
    <string name="add_review_calification">Choose how many stars you rate your experience with!</string>
    <string name="add_review_button">Tell us about your experience</string>

</resources>