<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddReviewActivity">

    <TextView
        android:id="@+id/add_review_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_review_title"
        app:layout_constraintBottom_toTopOf="@+id/add_review_calification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RatingBar
        android:id="@+id/add_review_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/add_review_description_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_review_calification" />

    <EditText
        android:id="@+id/add_review_description"
        android:layout_width="278dp"
        android:layout_height="204dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/add_review_description"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/add_review_button_action"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_review_description_title" />

    <TextView
        android:id="@+id/add_review_calification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_review_calification"
        app:layout_constraintBottom_toTopOf="@+id/add_review_rating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_review_title" />

    <TextView
        android:id="@+id/add_review_description_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_review_description"
        app:layout_constraintBottom_toTopOf="@+id/add_review_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_review_rating" />

    <Button
        android:id="@+id/add_review_button_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="addReview"
        android:text="ADD REVIEW"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_review_description" />

</androidx.constraintlayout.widget.ConstraintLayout>